# lzma-rust

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
lzma-rust/: Cargo.toml  fix_error_types.sh
lzma-rust/src/: decoder_alloc.rs  decoder_no_alloc.rs  lib.rs  lzma2_reader_alloc.rs  lzma2_reader_no_alloc.rs  lzma_reader_alloc.rs  lzma_reader_no_alloc.rs  lzma_reader_no_alloc_bk.rs  range_dec_alloc.rs  range_dec_no_alloc.rs  state.rs
lzma-rust/src/enc/: counting.rs  encoder.rs  encoder_fast.rs  encoder_normal.rs  lzma2_writer.rs  lzma_writer.rs  mod.rs  range_enc.rs
lzma-rust/src/lz/: bt4.rs  hash234.rs  hc4.rs  lz_decoder_alloc.rs  lz_decoder_no_alloc.rs  lz_encoder.rs
src/: decoder_alloc.rs  decoder_no_alloc.rs  lib.rs  lzma2_reader_alloc.rs  lzma2_reader_no_alloc.rs  lzma_reader_alloc.rs  lzma_reader_no_alloc.rs  range_dec_alloc.rs  range_dec_no_alloc.rs  state.rs
src/enc/: counting.rs  encoder.rs  encoder_fast.rs  encoder_normal.rs  lzma2_writer.rs  lzma_writer.rs  range_enc.rs
src/lz/: bt4.rs  hash234.rs  hc4.rs  lz_encoder.rs  mod.rs
