[package]
description = "LZMA/LZMA2 codec ported from 'tukaani xz for java'"
edition = "2021"
homepage = "https://github.com/dyz1990/sevenz-rust/tree/main/lzma-rust"
name = "lzma-rust"
repository = "https://github.com/dyz1990/sevenz-rust/tree/main/lzma-rust"
rust-version = "1.60.0"
version = "0.1.6"
keywords = ["lzma"]
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["encoder", "alloc"]
no_std = ["dep:embedded-io"]
alloc = ["embedded-io/alloc"]
encoder = []

[dependencies]
embedded-io = { version = "0.6.1", optional = true }
